Refactor RevantageBidder for improved error handling